# bap-egui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  LICENSE.txt  README.md
.github/workflows/: rust.yml  win_rust.yml
resources/syntax/: gcode.tmLanguage.sublime-syntax
resources/test_geometry/: squiggle_4col.pgf
src/: machine.rs  main.rs  post.rs  sender.rs  view_model.rs
src/core/: commands.rs  config.rs  core_run.rs  group_ungroup.rs  machine.rs  mod.rs  paper.rs  pick_map.rs  post.rs  project.rs  render.rs  render_plot.rs  render_preview.rs  render_source.rs  selections.rs  sender.rs  serial.rs
src/core/commands/: hatch.rs  mat.rs  mod.rs
src/core/project/: bap_geometry.rs  extents.rs  geometry_kind.rs  import.rs  mod.rs  project.rs  reorder.rs  transforms.rs
src/ui/: arrange_mat.rs  bottom_panel.rs  config.rs  editor.rs  geo_layers.rs  hatch_tool_window.rs  machine.rs  menu.rs  mod.rs  paper_chooser.rs  pen_crib.rs  pen_delete.rs  pen_editor.rs  rulers.rs  scale_window.rs  scene_toggle.rs  space_command_palette.rs  tool_button.rs  tool_window.rs
src/ui/themes/: egui_nord.rs  mod.rs
src/view_model/: command_context.rs  default.rs  file_ops.rs  mod.rs  paper.rs  pick.rs  project_ops.rs  space_commands.rs  util.rs  view_core_update.rs  view_model_eframe.rs  view_model_get_set.rs  view_model_patch.rs
